@@ -129,6 +129,8 @@
       - :delstyle, :styleenable, :styledisable and :styletoggle accept a !
         to operate on all styles. [b6]
     * IMPORTANT option changes:
+      - 'hinttags' and 'extendedhinttags' now treat their values as
+        CSS selectors by default. [b6]
       - Option value quoting has changed. List options will
         no longer be split at quoted commas and the option name, operators, and
         = sign may no longer be quoted. This will break certain
